--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,19 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "pytest (>=9.0.2,<10.0.0)",
-    "allure-pytest (>=2.15.3,<3.0.0)"
+    "allure-pytest (>=2.15.3,<3.0.0)",
+    "responses (>=0.25.8,<0.26.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+addopts = "-ra"
+testpaths = ["tests"]
+markers = [
+  "api: API tests",
+  "ui: UI tests"
+]
